@@ -34,14 +34,5 @@ There is no special command to restore the files; the user is supposed to do it 
 2. With =zgrep= utility, find the file in the list of archived files. Locate the archive with this file.
 3. If needed, decrypt the archive. Extract the file from the =tar= archive.
 
-* Files
-1. [[file:backup.org][backup.org]] – contains elisp-part of the backup code, which is responsible for user-owned files,
-2. [[file:el-backup][el-backup]] is supposed to be run from ~/etc/cron.daily/~  by ~root~ user; it uses the code from
-3. [[file:common.sh][common.sh]] updates contents file; this file (containing names of the files to be archived) will be then used by =tar=,
-4. [[file:Makefile][Makefile]] to =make= them all,
-5. [[file:packaged/backup.el][packaged/backup.el]] for those who do not want to =make=. It should be copied to =~/.emacs.d/local-packages/= or another a directory from where emacs can load it using
-   either =emacsclient= or =emacs= command in [[file:el-backup][el-backup]].
-6. [[file:secret.conf][secret.conf]] and [[file:public.conf][public.conf]] are (examples of) system configuration files, see Quick Start above.
-7. [[file:el-backup.conf][el-backup.conf]] is the user configuration file which is processed by the [[file:packaged/backup.el][eLisp code]].
 * License
 This code is released under [[https://mit-license.org/][MIT license]].
