@@ -14,3 +14,6 @@ black-groups=tmp
 white-groups=important keepOneYear keepTwoYears keepThreeYears
 
 white-names=Makefile
+
+black-matches=  tmp /old /log /Downloads /Загрузки /.git/
+black-root-dirs=/etc/ /mnt/ /ssh: /tmp/ 
